<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_grid"
        android:title="@string/nav_services" />

    <item
        android:id="@+id/nav_ai_booking"
        android:icon="@drawable/ic_nav_center_placeholder"
        android:title="@string/nav_ai_booking" />

    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_appointments" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile" />
</menu>
