<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_change_password"
    android:orientation="vertical"
    android:padding="@dimen/space_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/touch_target_min"
            android:layout_height="@dimen/touch_target_min"
            android:background="@drawable/bg_avatar_circle">

            <ImageView
                android:layout_width="@dimen/space_24"
                android:layout_height="@dimen/space_24"
                android:layout_gravity="center"
                android:contentDescription="@string/profile_change_password"
                android:src="@drawable/ic_lock"
                app:tint="@color/color_primary" />
        </FrameLayout>

        <TextView
            style="@style/TextAppearance_ArtBarbershop_ScreenTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_12"
            android:layout_weight="1"
            android:text="@string/profile_change_password" />
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCurrentPassword"
        style="@style/Widget_ArtBarbershop_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:hint="@string/profile_current_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:autofillHints="password"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutNewPassword"
        style="@style/Widget_ArtBarbershop_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:hint="@string/profile_new_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:autofillHints="newPassword"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmPassword"
        style="@style/Widget_ArtBarbershop_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:hint="@string/profile_confirm_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:autofillHints="newPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelChangePassword"
            style="@style/Widget_ArtBarbershop_SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/profile_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonApplyChangePassword"
            style="@style/Widget_ArtBarbershop_PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/space_12"
            android:layout_weight="1"
            android:text="@string/profile_apply" />
    </LinearLayout>
</LinearLayout>
