<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_change_password"
    android:orientation="vertical"
    android:padding="@dimen/space_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">



        <TextView
            style="@style/TextAppearance_ArtBarbershop_ScreenTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_12"
            android:layout_weight="1"
            android:text="@string/profile_logout" />
    </LinearLayout>

    <TextView
        style="@style/TextAppearance_ArtBarbershop_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/profile_logout_confirmation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancelLogout"
            style="@style/Widget_ArtBarbershop_SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/profile_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirmLogout"
            style="@style/Widget_ArtBarbershop_DangerButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/space_12"
            android:layout_weight="1"
            android:text="@string/profile_logout" />
    </LinearLayout>
</LinearLayout>
